--- a/stores/snapcraft/stable/snap/snapcraft.yaml
+++ b/stores/snapcraft/stable/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
-name: void
-adopt-info: void
-summary: The open source AI code editor
+name: codium
+adopt-info: codium
+summary: Code editing. Redefined.
 description: |
-  Void is an open source Cursor alternative. Write code with the best AI tools, use any model, and retain full control over your data.
+  Binary releases of Visual Studio Code without branding/telemetry/licensing
 
 base: core20
 grade: stable
@@ -10,12 +10,12 @@ confinement: classic
 compression: lzo
 
 parts:
-  void:
+  codium:
     plugin: nil
     override-build: |
       set -eu
       # Get .deb url
-      wget --quiet https://api.github.com/repos/voideditor/binaries/releases -O latest.json
+      wget --quiet https://api.github.com/repos/VSCodium/vscodium/releases -O latest.json
       VERSION=$( jq -r 'sort_by(.tag_name)|last.tag_name' latest.json )
       DEB_URL=$( jq -r 'map(select(.tag_name == "'"${VERSION}"'"))|first.assets[].browser_download_url|select(endswith("'"_${SNAPCRAFT_TARGET_ARCH}.deb"'"))' latest.json )
       DEB_NAME=$( basename "${DEB_URL}" )
@@ -30,12 +30,12 @@ parts:
       snapcraftctl set-version "${VERSION}"
       # Prepare GUI
       mkdir -p "${SNAPCRAFT_PART_INSTALL}/meta/gui"
-      cp "${SNAPCRAFT_PART_INSTALL}/usr/share/void/resources/app/resources/linux/code.png" "${SNAPCRAFT_PART_INSTALL}/meta/gui/void.png"
+      cp "${SNAPCRAFT_PART_INSTALL}/usr/share/codium/resources/app/resources/linux/code.png" "${SNAPCRAFT_PART_INSTALL}/meta/gui/codium.png"
       # Update paths
-      sed -i 's|Exec=/usr/share/void/void|Exec=void --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void.desktop"
-      sed -i 's|Exec=/usr/share/void/void|Exec=void --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void-url-handler.desktop"
-      sed -i 's|Icon=void|Icon=${SNAP}/meta/gui/void.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void.desktop"
-      sed -i 's|Icon=void|Icon=${SNAP}/meta/gui/void.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void-url-handler.desktop"
+      sed -i 's|Exec=/usr/share/codium/codium|Exec=codium --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium.desktop"
+      sed -i 's|Exec=/usr/share/codium/codium|Exec=codium --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium-url-handler.desktop"
+      sed -i 's|Icon=vscodium|Icon=${SNAP}/meta/gui/codium.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium.desktop"
+      sed -i 's|Icon=vscodium|Icon=${SNAP}/meta/gui/codium.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium-url-handler.desktop"
     build-packages:
       - wget
       - jq
@@ -75,7 +75,7 @@ parts:
       - -usr/share/icons
       - -usr/share/lintian
       - -usr/share/man
-      - -usr/share/void/chrome-sandbox
+      - -usr/share/codium/chrome-sandbox
     build-attributes:
       - enable-patchelf
     override-prime: |
@@ -88,16 +88,16 @@ parts:
 
   electron-launch:
     after:
-      - void
+      - codium
     plugin: dump
     source: snap/local/bin
 
 apps:
-  void:
-    command: electron-launch $SNAP/usr/share/void/bin/void --no-sandbox
-    desktop: usr/share/applications/void.desktop
-    common-id: void.desktop
+  codium:
+    command: electron-launch $SNAP/usr/share/codium/bin/codium --no-sandbox
+    desktop: usr/share/applications/codium.desktop
+    common-id: codium.desktop
 
   url-handler:
-    command: electron-launch $SNAP/usr/share/void/bin/void --open-url --no-sandbox
-    desktop: usr/share/applications/void-url-handler.desktop
+    command: electron-launch $SNAP/usr/share/codium/bin/codium --open-url --no-sandbox
+    desktop: usr/share/applications/codium-url-handler.desktop
