--- a/.github/workflows/stable-windows.yml
+++ b/.github/workflows/stable-windows.yml
@@ -25,12 +25,14 @@ on:
     - '**/*.md'
 
 env:
-  APP_NAME: Void
-  ASSETS_REPOSITORY: ${{ github.repository_owner }}/binaries
+  APP_NAME: VSCodium
+  ASSETS_REPOSITORY: ${{ github.repository }}
+  BINARY_NAME: codium
+  GH_REPO_PATH: ${{ github.repository }}
+  ORG_NAME: ${{ github.repository_owner }}
   OS_NAME: windows
   VERSIONS_REPOSITORY: ${{ github.repository_owner }}/versions
   VSCODE_QUALITY: stable
-  NEW_RELEASE: true
 
 jobs:
   check:
@@ -100,10 +102,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.18.2'
-        if: env.SHOULD_BUILD == 'yes'
-
-      - name: Install Yarn
-        run: npm install -g yarn
         if: env.SHOULD_BUILD == 'yes'
 
       - name: Setup Python 3
@@ -187,10 +185,6 @@ jobs:
           node-version: '20.18.2'
         if: env.SHOULD_BUILD == 'yes'
 
-      - name: Install Yarn
-        run: npm install -g yarn
-        if: env.SHOULD_BUILD == 'yes'
-
       - name: Setup Python 3
         uses: actions/setup-python@v5
         with:
@@ -222,31 +216,31 @@ jobs:
         run: ./prepare_assets.sh
         if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
 
-      # - name: Upload unsigned artifacts
-      #   id: upload-unsigned-artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: unsigned-${{ matrix.vscode_arch }}
-      #     path: |
-      #       assets/*.exe
-      #       assets/*.msi
-      #     retention-days: 1
-      #   if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
+      - name: Upload unsigned artifacts
+        id: upload-unsigned-artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: unsigned-${{ matrix.vscode_arch }}
+          path: |
+            assets/*.exe
+            assets/*.msi
+          retention-days: 1
+        if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
 
-      # - name: Signing
-      #   uses: signpath/github-action-submit-signing-request@v1
-      #   with:
-      #     api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
-      #     organization-id: ${{ secrets.SIGNPATH_ORGANIZATION_ID }}
-      #     project-slug: ${{ secrets.SIGNPATH_PROJECT_SLUG }}
-      #     signing-policy-slug: ${{ secrets.SIGNPATH_POLICY_SLUG }}
-      #     github-artifact-id: ${{ steps.upload-unsigned-artifacts.outputs.artifact-id }}
-      #     artifact-configuration-slug: ${{ matrix.vscode_arch }}
-      #     wait-for-completion: true
-      #     # 3h to manually approve the request
-      #     wait-for-completion-timeout-in-seconds: 10800
-      #     output-artifact-directory: assets/
-      #   if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
+      - name: Signing
+        uses: signpath/github-action-submit-signing-request@v1
+        with:
+          api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
+          organization-id: ${{ secrets.SIGNPATH_ORGANIZATION_ID }}
+          project-slug: ${{ secrets.SIGNPATH_PROJECT_SLUG }}
+          signing-policy-slug: ${{ secrets.SIGNPATH_POLICY_SLUG }}
+          github-artifact-id: ${{ steps.upload-unsigned-artifacts.outputs.artifact-id }}
+          artifact-configuration-slug: ${{ matrix.vscode_arch }}
+          wait-for-completion: true
+          # 3h to manually approve the request
+          wait-for-completion-timeout-in-seconds: 10800
+          output-artifact-directory: assets/
+        if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
 
       - name: Prepare checksums
         run: ./prepare_checksums.sh
@@ -254,8 +248,7 @@ jobs:
 
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.STRONGER_GITHUB_TOKEN }}
-          GITHUB_USERNAME: ${{ github.repository_owner }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./release.sh
         if: env.SHOULD_BUILD == 'yes' && env.SHOULD_DEPLOY == 'yes'
 
@@ -275,33 +268,32 @@ jobs:
           retention-days: 3
         if: env.SHOULD_BUILD == 'yes' && env.SHOULD_DEPLOY == 'no' && github.event.inputs.generate_assets == 'true'
 
-  # Void commented this out:
-  # winget:
-  #   needs: build
-  #   runs-on: windows-latest
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #   env:
-  #     APP_IDENTIFIER: Void.Void
-  #   if: needs.build.outputs.SHOULD_DEPLOY == 'yes'
+  winget:
+    needs: build
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
+    env:
+      APP_IDENTIFIER: VSCodium.VSCodium
+    if: needs.build.outputs.SHOULD_DEPLOY == 'yes'
 
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         ref: ${{ env.GITHUB_BRANCH }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ env.GITHUB_BRANCH }}
 
-  #     - name: Check version
-  #       run: ./stores/winget/check_version.sh
-  #       env:
-  #         RELEASE_VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
+      - name: Check version
+        run: ./stores/winget/check_version.sh
+        env:
+          RELEASE_VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
 
-  #     - name: Release to WinGet
-  #       uses: vedantmgoyal9/winget-releaser@main
-  #       with:
-  #         identifier: ${{ env.APP_IDENTIFIER }}
-  #         version: ${{ env.RELEASE_VERSION }}
-  #         release-tag: ${{ env.RELEASE_VERSION }}
-  #         installers-regex: '\.exe$' # only .exe files
-  #         token: ${{ secrets.STRONGER_GITHUB_TOKEN }}
-  #       if: env.SHOULD_DEPLOY == 'yes'
+      - name: Release to WinGet
+        uses: vedantmgoyal9/winget-releaser@main
+        with:
+          identifier: ${{ env.APP_IDENTIFIER }}
+          version: ${{ env.RELEASE_VERSION }}
+          release-tag: ${{ env.RELEASE_VERSION }}
+          installers-regex: '\.exe$' # only .exe files
+          token: ${{ secrets.STRONGER_GITHUB_TOKEN }}
+        if: env.SHOULD_DEPLOY == 'yes'
