--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 vscode*
 VS*/*
 VSCode*
-Void*
+VSCodium*
 .DS_Store
 *.env
 assets/
@@ -10,7 +10,7 @@ build/linux/appimage/pkg2appimage.AppDir
 build/linux/appimage/pkg2appimage-*.AppImage
 build/linux/appimage/pkg2appimage.AppImage
 build/linux/appimage/squashfs-root
-build/linux/appimage/Void
+build/linux/appimage/VSCodium
 build/windows/msi/releasedir
 build/windows/msi/Files*.wxs
 build/windows/msi/Files*.wixobj
