--- a/stores/snapcraft/insider/snap/snapcraft.yaml
+++ b/stores/snapcraft/insider/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
-name: void-insiders
-adopt-info: void-insiders
-summary: The open source AI code editor
+name: codium-insiders
+adopt-info: codium-insiders
+summary: Code editing. Redefined.
 description: |
-  Void is an open source Cursor alternative. Write code with the best AI tools, use any model, and retain full control over your data.
+  Binary releases of Visual Studio Code - Insiders without branding/telemetry/licensing
 
 base: core20
 grade: stable
@@ -10,12 +10,12 @@ confinement: classic
 compression: lzo
 
 parts:
-  void-insiders:
+  codium-insiders:
     plugin: nil
     override-build: |
       set -eu
       # Get .deb url
-      wget --quiet https://api.github.com/repos/voideditor/binaries-insiders/releases -O latest.json
+      wget --quiet https://api.github.com/repos/VSCodium/vscodium-insiders/releases -O latest.json
       VERSION=$( jq -r 'sort_by(.tag_name)|last.tag_name' latest.json )
       DEB_URL=$( jq -r 'map(select(.tag_name == "'"${VERSION}"'"))|first.assets[].browser_download_url|select(endswith("'"_${SNAPCRAFT_TARGET_ARCH}.deb"'"))' latest.json )
       DEB_NAME=$( basename "${DEB_URL}" )
@@ -30,12 +30,12 @@ parts:
       snapcraftctl set-version "${VERSION/-*/}"
       # Prepare GUI
       mkdir -p "${SNAPCRAFT_PART_INSTALL}/meta/gui"
-      cp "${SNAPCRAFT_PART_INSTALL}/usr/share/void-insiders/resources/app/resources/linux/code.png" "${SNAPCRAFT_PART_INSTALL}/meta/gui/void-insiders.png"
+      cp "${SNAPCRAFT_PART_INSTALL}/usr/share/codium-insiders/resources/app/resources/linux/code.png" "${SNAPCRAFT_PART_INSTALL}/meta/gui/codium-insiders.png"
       # Update paths
-      sed -i 's|Exec=/usr/share/void/void-insiders|Exec=void-insiders --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void-insiders.desktop"
-      sed -i 's|Exec=/usr/share/void/void-insiders|Exec=void-insiders --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void-insiders-url-handler.desktop"
-      sed -i 's|Icon=void-insiders|Icon=${SNAP}/meta/gui/void-insiders.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void-insiders.desktop"
-      sed -i 's|Icon=void-insiders|Icon=${SNAP}/meta/gui/void-insiders.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/void-insiders-url-handler.desktop"
+      sed -i 's|Exec=/usr/share/codium/codium-insiders|Exec=codium-insiders --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium-insiders.desktop"
+      sed -i 's|Exec=/usr/share/codium/codium-insiders|Exec=codium-insiders --force-user-env|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium-insiders-url-handler.desktop"
+      sed -i 's|Icon=vscodium-insiders|Icon=${SNAP}/meta/gui/codium-insiders.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium-insiders.desktop"
+      sed -i 's|Icon=vscodium-insiders|Icon=${SNAP}/meta/gui/codium-insiders.png|g' "${SNAPCRAFT_PART_INSTALL}/usr/share/applications/codium-insiders-url-handler.desktop"
     build-packages:
       - wget
       - jq
@@ -75,7 +75,7 @@ parts:
       - -usr/share/icons
       - -usr/share/lintian
       - -usr/share/man
-      - -usr/share/void/chrome-sandbox
+      - -usr/share/codium/chrome-sandbox
     build-attributes:
       - enable-patchelf
     override-prime: |
@@ -88,7 +88,7 @@ parts:
 
   electron-launch:
     after:
-      - void-insiders
+      - codium-insiders
     plugin: dump
     source: snap/local/bin
 
@@ -113,13 +113,13 @@ parts:
       - usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/dri
 
 apps:
-  void:
-    command: electron-launch $SNAP/usr/share/void-insiders/bin/void-insiders --no-sandbox
-    desktop: usr/share/applications/void-insiders.desktop
-    common-id: void-insiders.desktop
+  codium:
+    command: electron-launch $SNAP/usr/share/codium-insiders/bin/codium-insiders --no-sandbox
+    desktop: usr/share/applications/codium-insiders.desktop
+    common-id: codium-insiders.desktop
     environment:
       LIBGL_DRIVERS_PATH: $SNAP/usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/dri
 
   url-handler:
-    command: electron-launch $SNAP/usr/share/void-insiders/bin/void-insiders --open-url --no-sandbox
-    desktop: usr/share/applications/void-insiders-url-handler.desktop
+    command: electron-launch $SNAP/usr/share/codium-insiders/bin/codium-insiders --open-url --no-sandbox
+    desktop: usr/share/applications/codium-insiders-url-handler.desktop
