--- a/.github/workflows/stable-windows.yml
+++ b/.github/workflows/stable-windows.yml
@@ -25,9 +25,9 @@ on:
     - '**/*.md'
 
 env:
-  APP_NAME: VSCodium
-  ASSETS_REPOSITORY: ${{ github.repository }}
-  BINARY_NAME: codium
+  APP_NAME: Void
+  ASSETS_REPOSITORY: ${{ github.repository_owner }}/binaries
+  BINARY_NAME: void
   GH_REPO_PATH: ${{ github.repository }}
   ORG_NAME: ${{ github.repository_owner }}
   OS_NAME: windows
@@ -216,16 +216,17 @@ jobs:
         run: ./prepare_assets.sh
         if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
 
-      - name: Upload unsigned artifacts
-        id: upload-unsigned-artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: unsigned-${{ matrix.vscode_arch }}
-          path: |
-            assets/*.exe
-            assets/*.msi
-          retention-days: 1
-        if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
+      # Void commented this - we should re-add it eventually
+      # - name: Upload unsigned artifacts
+      #   id: upload-unsigned-artifacts
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: unsigned-${{ matrix.vscode_arch }}
+      #     path: |
+      #       assets/*.exe
+      #       assets/*.msi
+      #     retention-days: 1
+      #   if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.generate_assets == 'true')
 
       - name: Signing
         uses: signpath/github-action-submit-signing-request@v1
@@ -268,32 +269,33 @@ jobs:
           retention-days: 3
         if: env.SHOULD_BUILD == 'yes' && env.SHOULD_DEPLOY == 'no' && github.event.inputs.generate_assets == 'true'
 
-  winget:
-    needs: build
-    runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
-    env:
-      APP_IDENTIFIER: VSCodium.VSCodium
-    if: needs.build.outputs.SHOULD_DEPLOY == 'yes'
+  # Void commented this - we should re-add it eventually
+  # winget:
+  #   needs: build
+  #   runs-on: windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   env:
+  #     APP_IDENTIFIER: VSCodium.VSCodium
+  #   if: needs.build.outputs.SHOULD_DEPLOY == 'yes'
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ env.GITHUB_BRANCH }}
+    # steps:
+    #   - uses: actions/checkout@v4
+    #     with:
+    #       ref: ${{ env.GITHUB_BRANCH }}
 
-      - name: Check version
-        run: ./stores/winget/check_version.sh
-        env:
-          RELEASE_VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
+      # - name: Check version
+      #   run: ./stores/winget/check_version.sh
+      #   env:
+      #     RELEASE_VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
 
-      - name: Release to WinGet
-        uses: vedantmgoyal9/winget-releaser@main
-        with:
-          identifier: ${{ env.APP_IDENTIFIER }}
-          version: ${{ env.RELEASE_VERSION }}
-          release-tag: ${{ env.RELEASE_VERSION }}
-          installers-regex: '\.exe$' # only .exe files
-          token: ${{ secrets.STRONGER_GITHUB_TOKEN }}
-        if: env.SHOULD_DEPLOY == 'yes'
+      # - name: Release to WinGet
+      #   uses: vedantmgoyal9/winget-releaser@main
+      #   with:
+      #     identifier: ${{ env.APP_IDENTIFIER }}
+      #     version: ${{ env.RELEASE_VERSION }}
+      #     release-tag: ${{ env.RELEASE_VERSION }}
+      #     installers-regex: '\.exe$' # only .exe files
+      #     token: ${{ secrets.STRONGER_GITHUB_TOKEN }}
+      #   if: env.SHOULD_DEPLOY == 'yes'
